# npe2-tester

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
npe2_tester/: __init__.py  _activate.py  napari.yaml
