[metadata]
name = npe2-tester

author = Talley Lambert
author_email = talley.lambert@gmail.com
url = https://github.com/tlambert03/npe2-tester
license = BSD-3-Clause
description = Testing new plugin manifest
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/tlambert03/npe2-tester/issues
    Documentation = https://github.com/tlambert03/npe2-tester#README.md
    Source Code = https://github.com/tlambert03/npe2-tester
    User Support = https://github.com/tlambert03/npe2-tester/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    npe2-tester = npe2_tester
