[metadata]
name = npe2_tester
description = Testing new plugin manifest
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/npe2-tester
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/tlambert03/npe2-tester/issues
    Documentation = https://github.com/tlambert03/npe2-tester#README.md
    Source Code = https://github.com/tlambert03/npe2-tester
    User Support = https://github.com/tlambert03/npe2-tester/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm

[options.entry_points]
napari.manifest =
    npe2-tester = npe2_tester:napari.yaml
